--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -13,3 +13,5 @@ $body-font-family: 'Vazir';
   font-display: swap;
   src: url('~assets/font/Vazir-Light-FD-WOL.ttf') format('truetype');
 }
+
+@import "vue-select/src/scss/vue-select.scss";
