finish content/post

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -28,3 +28,10 @@ $body-font-family: 'Vazir';
   margin-top: 2px !important;
   border-radius: 15px !important;
 }
+
+.vpd-input-group {
+  background-color: antiquewhite !important;
+}
+.vpd-body{
+  background-color: black !important;
+}
